; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p_build.c_p2p_buf_update_ie_hdr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/p2p/extr_p2p_build.c_p2p_buf_update_ie_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @p2p_buf_update_ie_hdr(%struct.wpabuf* %0, i32* %1) #0 {
  %3 = alloca %struct.wpabuf*, align 8
  %4 = alloca i32*, align 8
  store %struct.wpabuf* %0, %struct.wpabuf** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.wpabuf*, %struct.wpabuf** %3, align 8
  %6 = call i64 @wpabuf_put(%struct.wpabuf* %5, i32 0)
  %7 = inttoptr i64 %6 to i32*
  %8 = load i32*, i32** %4, align 8
  %9 = ptrtoint i32* %7 to i64
  %10 = ptrtoint i32* %8 to i64
  %11 = sub i64 %9, %10
  %12 = sdiv exact i64 %11, 4
  %13 = sub nsw i64 %12, 1
  %14 = trunc i64 %13 to i32
  %15 = load i32*, i32** %4, align 8
  store i32 %14, i32* %15, align 4
  ret void
}

declare dso_local i64 @wpabuf_put(%struct.wpabuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
